<resources>
    <string name="app_name" translatable="false">ControlProp</string>
    <string name="btn_connexion">CONNEXION</string>
    <string name="btn_requet_robot">J\'ai oublié de me déconnecter</string>
    <string name="btn_requet_mail">J\'ai oublié mes identifiants</string>
    <string name="err_conex">Saisissez votre pseudo et votre mot de passe pour continuer</string>
    <string name="hint_pseudo">Pseudo</string>
    <string name="hint_password">Password</string>
    <string name="lbl_agc">Agency</string>
    <string name="lbl_grp">Group</string>
    <string name="lbl_rsd">Residence</string>
    <string name="lbl_rgpd">I have read and accept the personal data protection terms</string>
    <string name="btn_deco">DISCONNECT</string>
    <string name="tag_mail">mail</string>
    <string name="tag_robot">robot</string>
    <string name="hint_get_mail">Enter your contact email</string>
    <string name="btn_valid">Validate</string>
    <string name="btn_cancel">Cancel</string>
    <string name="chx_conf_ctrl_prog">Scheduled</string>
    <string name="chx_conf_ctrl_inopine">Unannounced</string>
    <string name="chx_conf_meteo_norm">Normal</string>
    <string name="chx_conf_meteo_perturb">Disturbed</string>
    <string name="chx_conf_conform">Compliant</string>
    <string name="chx_conf_no_conform">Non-compliant</string>
    <string name="mess_echec_conexion">Connexion failed</string>
    <string name="btn_start">Start</string>
    <string name="lbl_control_full">Full entry</string>
    <string name="lbl_meteo">Weather</string>
    <string name="lbl_prod">Products</string>
    <string name="lbl_aff">Affichage</string>
    <string name="lbl_ref_secteur">Sector referent</string>
    <string name="lbl_ref_adm">Administrative referent</string>
    <string name="lbl_ref_agt">Maintenance referent</string>
    <string name="lbl_zone">Zone</string>
    <string name="hint_ref_rsd" translatable="false">0000000000</string>
    <string name="hint_nam_rsd">Residence name</string>
    <string name="hint_entry_rsd">Entry</string>
    <string name="hint_adr_rsd">Address</string>
    <string name="hint_ref_sec">Sector referent name</string>
    <string name="hint_ref_admin">Administrative referent name</string>
    <string name="txt_so">S O</string>
    <string name="_prev"><![CDATA[<]]></string>
    <string name="comment">Comment</string>
    <string name="prise_de_vue">Photo</string>
    <string name="lbl_abords">Surroundings / Building access</string>
    <string name="_icon">icon</string>
    <string name="_element">Element</string>
    <string name="_criter">Critter</string>
    <string name="send_mail">Send mail</string>
    <string name="_dest">Recipient</string>
    <string name="_send">Send</string>
    <string name="hint_message">Message</string>
    <string name="_finish">End of control</string>
    <string name="_end">Valid</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_clear">Clear</string>
    <string name="hint_agent_name">Enter agent name</string>
    <string name="plan_d_action">Action plan</string>
    <string name="select_date">Required deadline: </string>
    <string name="hint_search">Search for an entry</string>
    <string name="lbl_sign">Sign</string>
    <string name="lbl_send">Send</string>
    <string name="btn_no">NO</string>
    <string name="btn_yes">YES</string>
    <string name="_selection">Select</string>
    <string name="lbl_select_entry">Sélectionner une entrée</string>
    <string name="conextion_lost">Get a connection</string>
    <string name="lbl_bad_version">A new version is available. Update your app to continue.</string>
    <string name="mess_bad_permission_internet">You cannot use the app without network access</string>
    <string name="mess_bad_permission_write">You cannot save photos without permission</string>
    <string name="btn_lift_plan">Lift</string>
    <string name="mess_use_finish">Use the FINISH button</string>
    <string name="lbl_so">SO</string>
    <string name="lbl_etat_lieu_entrant">Incoming inventory</string>
    <string name="lbl_control_alt">Random zones</string>
    <string name="lbl_leve_plan_act">Action plan follow-up</string>
    <string name="lbl_etat_lieu_sortant">Outgoing inventory</string>
    <string name="symb_info" translatable="false">\?</string>
    <string name="save_and_add_alert">Save and add alert</string>
    <string name="mess_bad_permission_calendar">You cannot use reminders without permission</string>
    <string name="mess_unlock_access">Unlock your access</string>
    <string name="mess_get_identifient">Recover your credentials</string>
    <string name="mess_mail_send">An email has been sent to </string>
    <string name="hint_icon_zone">Icon zone</string>
    <string name="hint_desordres_techniques">desordres_techniques</string>
    <string name="btn_next">Next</string>
    <string name="hint_comment">Enter your comment here</string>
    <string name="title_comment">comments</string>
    <string name="entry_lbl">Entry:</string>
    <string name="adresse_lbl">Address:</string>
    <string name="last_ctrl_lbl">Last control:</string>
    <string name="synchroniser">SYNCHRONIZE</string>
    <string name="lbl_synchronize">You have controls pending synchronization.</string>
    <string name="lbl_plus_tard">Later</string>
    <string name="mess_connexion_for_synchro">Get a connection to synchronize your controls</string>
    <string name="mess_timeout">Response time exceeded. Contact your manager.</string>
    <string name="wait">wait</string>
    <string name="zones_proxi">Proximity zones</string>
    <string name="zones_contrat">Contract zones</string>
		<string name="email_sent">Un email vous a été envoyé</string>
    <string name="invalid_email">Adresse email invalide</string>
    <string name="no_network">Pas de connexion réseau</string>
		<string name="update_critical_title">Mise à jour requise</string>
    <string name="update_critical_message">Une mise à jour critique est nécessaire pour continuer à utiliser l\'application. Veuillez mettre à jour pour continuer.</string>
    <string name="update_warning_message">La mise à jour a échoué. Certaines fonctionnalités pourraient ne pas fonctionner correctement.</string>
    <string name="retry">Réessayer</string>
    <string name="quit">Quitter</string>
		<!-- Messages d'erreur -->
    <string name="err_version_mismatch">Version incompatible (locale: %1$d, serveur: %2$d)</string>
    <string name="err_version_outdated">Version obsolète. Veuillez mettre à jour l\'application</string>
    <string name="err_device_not_recognized">Appareil non reconnu</string>
    <string name="err_session_expired">Session expirée. Veuillez vous reconnecter</string>
    <string name="err_network">Erreur réseau. Veuillez vérifier votre connexion</string>
    <string name="err_server">Erreur serveur. Veuillez réessayer plus tard</string>
    <string name="err_unknown">Une erreur inattendue s\'est produite</string>
    <string name="err_json_parse">Erreur de traitement des données: %1$s</string>
    <string name="err_unexpected">Erreur inattendue: %1$s</string>
		<!-- Messages de validation -->
    <string name="err_username_empty">Le nom d\'utilisateur ne peut pas être vide</string>
    <string name="err_password_empty">Le mot de passe ne peut pas être vide</string>
    <string name="err_username_too_short">Le nom d\'utilisateur doit contenir au moins 3 caractères</string>
    <string name="err_password_too_short">Le mot de passe doit contenir au moins 6 caractères</string>
    <string name="err_rgpd">Vous devez acepter les thermes de la licence pour continuer.</string>
		<!-- Chaînes d'accessibilité -->
    <string name="accessibility_username">Champ de saisie du nom d\'utilisateur</string>
    <string name="accessibility_password">Champ de saisie du mot de passe</string>
    <string name="accessibility_connect_button">Bouton de connexion</string>
    <string name="accessibility_disconnect_button">Bouton de déconnexion</string>
    <string name="accessibility_rgpd_checkbox">Case à cocher d\'acceptation RGPD</string>
    <string name="accessibility_loading">Chargement en cours</string>
    <string name="accessibility_loading_complete">Chargement terminé</string>
    <string name="error_permission_denied">La plupart des fonctions vous seront inaccessibles.</string>
    <string name="error_update_check">Une erreur s\'est produite lors de la vérification de la mise à jour. Redémarrez votre application.</string>
    <string name="version_format">Version: %s</string>
</resources>
