<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@drawable/new_image_fond_tablette"

    tools:context=".controllers.activities.AddCommentActivity" >

    <RelativeLayout android:id="@+id/add_comment_activity_title_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/main_ctrl_prop">

        <TextView android:id="@+id/add_comment_activity_title_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:padding="20dp"

            android:textSize="30sp"
            android:textColor="@color/_white"
            android:textAllCaps="true"
            android:text="@string/comment" />

        <TextView android:id="@+id/add_comment_activity_prev_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/_prev"
            android:textColor="@color/_white"
            android:textSize="35sp"

            android:onClick="addCommentActivityActions"
            android:tag="cancel"

            android:gravity="center_vertical"
            android:padding="20dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button android:id="@+id/add_comment_activity_save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"

            android:onClick="addCommentActivityActions"
            android:tag="save"

            android:textColor="@color/_white"
            android:textSize="20sp"
            android:background="@drawable/button_selected_green"
            android:text="@string/btn_save" />

        <EditText   android:id="@+id/add_comment_activity_comment_input"
            android:layout_width="match_parent"
            android:layout_height="150dp"

            android:layout_margin="10dp"

            android:hint="@string/hint_comment"
            android:gravity="top"
            android:inputType="textCapSentences|textAutoCorrect|textMultiLine" />

        <Button
            android:id="@+id/add_comment_activity_capture_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="20dp"

            android:onClick="addCommentActivityActions"
            android:tag="picture"

            android:background="@drawable/button_selected_green"
            android:text="@string/prise_de_vue"
            android:textColor="@color/_white"
            android:textSize="20sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/add_comment_activity_capture_img"
                android:layout_width="160dp"
                android:layout_height="213dp"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"

                android:scaleType="fitXY" />


        </LinearLayout>

    </ScrollView>



</LinearLayout>