<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:weightSum="100"
    android:background="@drawable/new_image_fond_tablette"

    tools:context=".controllers.activities.TypeCtrlActivity">

    <TextView android:id="@+id/type_ctrl_activity_edle_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"

        android:gravity="center_horizontal|center_vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"

        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="35sp"
        android:autoSizeStepGranularity="2sp"

        android:background="@drawable/button_selected_green"
        android:textColor="@color/_white"

        android:tag="e"
        android:onClick="makeCtrl"

        android:text="@string/lbl_etat_lieu_entrant"/>

    <TextView android:id="@+id/type_ctrl_activity_cplt_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"

        android:gravity="center_horizontal|center_vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"

        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="35sp"
        android:autoSizeStepGranularity="2sp"

        android:background="@drawable/button_selected_green"
        android:textColor="@color/_white"

        android:tag="c"
        android:onClick="makeCtrl"

        android:text="@string/lbl_control_full"/>

    <TextView android:id="@+id/type_ctrl_activity_rnd_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"

        android:gravity="center_horizontal|center_vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"

        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="35sp"
        android:autoSizeStepGranularity="2sp"

        android:background="@drawable/button_selected_green"
        android:textColor="@color/_white"

        android:tag="cr"
        android:onClick="makeCtrl"

        android:text="@string/lbl_control_alt"/>

    <TextView android:id="@+id/type_ctrl_activity_plan_act_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"

        android:gravity="center_horizontal|center_vertical"
        android:layout_marginHorizontal="10dp"

        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="35sp"
        android:autoSizeStepGranularity="2sp"

        android:background="@drawable/button_selected_green"
        android:textColor="@color/_white"

        android:tag="p"
        android:onClick="makeCtrl"

        android:text="@string/lbl_leve_plan_act"/>

    <TextView android:id="@+id/type_ctrl_activity_edls_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"

        android:gravity="center_horizontal|center_vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"

        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="35sp"
        android:autoSizeStepGranularity="2sp"

        android:background="@drawable/button_selected_green"
        android:textColor="@color/_white"

        android:tag="s"
        android:onClick="makeCtrl"

        android:text="@string/lbl_etat_lieu_sortant"/>

</LinearLayout>