<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical" >

    <TextView android:id="@+id/criter_item_text_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dp"

        android:textSize="20sp"
        android:text="@string/_criter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"

        android:weightSum="99">

        <Button android:id="@+id/criter_item_ok_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"

            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:background="@drawable/button_desabled"

            android:textSize="20sp"
            android:text="@string/btn_no"/>

        <Button android:id="@+id/criter_item_bad_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"

            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:background="@drawable/button_desabled"

            android:textSize="20sp"
            android:text="@string/btn_yes"/>

        <ImageButton android:id="@+id/criter_item_com_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"

            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:background="@drawable/button_desabled"
            android:enabled="false"

            android:src="@drawable/icon_txt"/>

    </LinearLayout>

</LinearLayout>